# backend/resources/views/emails/invitation.blade.php
@@ -1,0 +1,3 @@
+<p>You have been invited to SiteCare as a {{ $role }}.</p>
+<p><a href="{{ $inviteUrl }}">Accept your invitation</a></p>
+<p>This link expires in seven days and can only be used once. If you were not expecting this invitation, you can ignore this email.</p>
